--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -6,17 +6,12 @@
 
   <div id="header_buttons" class="avenir-900">
     <div class="header-button"><a href="/">Home</a></div>
-    <div class="header-button"><a href="/events">Events</a></div>
-    <div class="header-button"><a href="/open_gym/info">Open Gym</a></div>
     <% if (current_user) { %>
-      <div class="header-button"> <span id="current-user"> <a href="/users/<%= current_user._id %>"><%= current_user.full_name() %></a> </span></div>
-      <%  if(current_user.is_admin()){ %>
-          <div class="header-button"> <a href="/admin">Admin Page</a></div>
-        <% } %>
-        <div class="header-button"> <a href="/users/logout">Logout</a></div>
+      <div class="header-button"> <span id="current-user"> <a href="/users/<%= current_user._id %>"><%= current_user.name %></a> </span></div>
+        <div class="header-button"> <a href="/hosts/logout">Logout</a></div>
     <% } else{ %>
-      <div class="header-button"><a href="/users/login">Log in</a></div>
-      <div class="header-button"><a href="/users/signup">Sign Up</a></div>
+      <div class="header-button"><a href="/hosts/login">Log in</a></div>
+      <div class="header-button"><a href="/hosts/signup">Sign Up</a></div>
     <% } %>
   </div>
 </div>
