--- a/app/views/users/signup.ejs
+++ b/app/views/users/signup.ejs
@@ -13,8 +13,9 @@
     <div class="main-container">
 
       <div id="signup-container">
+        
         <h1>Signup!</h1>
-        <form class="" action="/users/signup" method="post">
+        <form class="" action="/hosts/signup" method="post">
           <div class="signup-input-container">
             <label for="firstname">First Name</label>
             <input type="text" name="firstname" value="" required>
