--- a/app/views/map/map.ejs
+++ b/app/views/map/map.ejs
@@ -11,8 +11,21 @@
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
+    <p id="startLat"></p>
+    <p id="startLon"></p>
     <!--The div element for the map -->
     <div id="map"></div>
+    <script>
+    window.onload = function() {
+  var startPos;
+  var geoSuccess = function(position) {
+    startPos = position;
+    document.getElementById("startLat").innerHTML = startPos.coords.latitude;
+    document.getElementById("startLon").innerHTML = startPos.coords.longitude;
+  };
+  navigator.geolocation.getCurrentPosition(geoSuccess);
+};
+</script>
     <script>
 // Initialize and add the map
 function initMap() {
