--- a/app/views/map/map.ejs
+++ b/app/views/map/map.ejs
@@ -8,6 +8,9 @@
         width: 100%;  /* The width is the width of the web page */
        }
     </style>
+    <script>
+    var map;
+</script>
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
@@ -16,23 +19,12 @@
     <!--The div element for the map -->
     <div id="map"></div>
     <script>
-    window.onload = function() {
-  var startPos;
-  var geoSuccess = function(position) {
-    startPos = position;
-    document.getElementById("startLat").innerHTML = startPos.coords.latitude;
-    document.getElementById("startLon").innerHTML = startPos.coords.longitude;
-  };
-  navigator.geolocation.getCurrentPosition(geoSuccess);
-};
-</script>
-    <script>
 // Initialize and add the map
 function initMap() {
   // The location of Uluru
   var uluru = {lat: -25.344, lng: 131.036};
   // The map, centered at Uluru
-  var map = new google.maps.Map(
+  map = new google.maps.Map(
       document.getElementById('map'), {zoom: 4, center: uluru});
   // The marker, positioned at Uluru
   var marker = new google.maps.Marker({position: uluru, map: map});
@@ -41,5 +33,6 @@ function initMap() {
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=<%=GMAP_API_KEY%>&callback=initMap">
     </script>
+    <script src="/js/map_script.js" charset="utf-8"></script>
   </body>
 </html>
