--- a/app/views/map/map.ejs
+++ b/app/views/map/map.ejs
@@ -11,6 +11,7 @@
     <script>
     var map;
 </script>
+<script src="/js/jquery-3.1.1.min.js" charset="utf-8"></script>
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
