--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -1,7 +1,7 @@
 <div id="header">
 
   <div id="header_main_nav">
-    <a href="/"><h3>Maspeth Bible Church</h3></a>
+  <a href="/"><h1 style="padding: 0 0 10px 20px"><img src="/images/Logo.png" style="width: 30px;"/> SafeKeep</h1></a>
   </div>
 
   <div id="header_buttons" class="avenir-900">
