--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -5,37 +5,96 @@ $dark-gray: #3f3f3f;
 $orange: #dc493b;
 $white: #ffffff;
 $danger-red: #cc0000;
-$success-green: #4BB543;;
+$success-green: #4BB543;
 
+blockquote,
+body,
+code,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+html,
+p,
+pre {
+  margin: 0;
+  padding: 0;
+}
 
-html,body,blockquote,code,h1,h2,h3,h4,h5,h6,p,pre{margin:0;padding:0}
-button,fieldset,form,input,legend,textarea,select{margin:0;padding:0}
-a,a *{cursor:pointer}
-a:link,a:visited,a:hover,a:active{color:black;text-decoration:none;}
-div{margin:0;padding:0;background-color:transparent}
-button,input[type=button],input[type=image],input[type=reset],input[type=submit],label{cursor:pointer;}
-ul,li{list-style:none;margin:0;padding:0;}
+button,
+fieldset,
+form,
+input,
+legend,
+select,
+textarea {
+  margin: 0;
+  padding: 0;
+}
 
-.is-fullwidth{
+a,
+a * {
+  cursor: pointer;
+}
+
+a:active,
+a:hover,
+a:link,
+a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+div {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+button,
+input[type=button],
+input[type=image],
+input[type=reset],
+input[type=submit],
+label {
+  cursor: pointer;
+}
+
+li,
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.is-fullwidth {
   width: 100%;
 }
-.is-bold{
+
+.is-bold {
   font-weight: 900;
 }
-.is-italic{
+
+.is-italic {
   font-style: italic;
 }
-.is-centered-block{
+
+.is-centered-block {
   display: block;
   margin: 0 auto;
 }
-.is-text-centered{
+
+.is-text-centered {
   text-align: center;
 }
-.is-underline{
+
+.is-underline {
   text-decoration: underline;
 }
-.is-standard-submit{
+
+.is-standard-submit {
   border: none;
   background-color: unset;
   padding: 8px 12px;
@@ -43,28 +102,32 @@ ul,li{list-style:none;margin:0;padding:0;}
   font-size: 14px;
   font-weight: 900;
 }
-.is-standard-submit.blue-background{
+
+.is-standard-submit.blue-background {
   color: $white;
 }
-
 /**{
   border:0.5px solid red;
 }*/
-.church-background{
+.church-background {
   background-image: url("/images/church.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
-.green-background{
-  background-color: #2c3f48;;
+
+.green-background {
+  background-color: #2c3f48;
 }
-.blue-background{
+
+.blue-background {
   background-color: $royal-blue;
 }
-.royal-blue-font{
+
+.royal-blue-font {
   color: $royal-blue;
 }
-#message_container{
+
+#message_container {
   display: block;
   width: 100vw;
   /* padding: 5px; */
@@ -72,125 +135,144 @@ ul,li{list-style:none;margin:0;padding:0;}
   color: #ffffff;
   font-size: 18px;
 }
-.success_message{
+
+.success_message {
   padding: 5px;
   width: 100%;
   min-height: 30px;
   line-height: 30px;
   background-color: $success-green;
 }
-.error_message{
+
+.error_message {
   padding: 5px;
   width: 100%;
   min-height: 30px;
   line-height: 30px;
   background-color: $danger-red;
 }
-.link-blue{
+
+.link-blue {
   color: #3b7adb !important;
 }
-.width-60{
-  width:60%;
+
+.width-60 {
+  width: 60%;
 }
-.center-div{
+
+.center-div {
   margin: 0 auto;
 }
-.center-text{
+
+.center-text {
   text-align: center;
 }
 
-.padding-vertical-20{
-  padding-top:20px;
-  padding-bottom:20px;
+.padding-vertical-20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-
-.user-circle{
+.user-circle {
   width: 30px;
   height: 30px;
   border-radius: 15px;
   display: inline-block;
   line-height: 30px;
   font-size: 12px;
-   font-weight: 900;
-   letter-spacing: 0.4px;
-   color: #ffffff;
-   text-align: center;
-   margin-right: 10px;
+  font-weight: 900;
+  letter-spacing: 0.4px;
+  color: #ffffff;
+  text-align: center;
+  margin-right: 10px;
 }
-.user-color-1{
+
+.user-color-1 {
   background-color: #ed526c;
 }
-.user-color-2{
+
+.user-color-2 {
   background-color: #4a90e2;
 }
-.user-color-3{
-   background-color: #94e986;
+
+.user-color-3 {
+  background-color: #94e986;
 }
-.user-color-4{
+
+.user-color-4 {
   background-color: #f8e71c;
 }
-.user-color-5{
-   background-color: #a789ff;
+
+.user-color-5 {
+  background-color: #a789ff;
 }
-.user-color-6{
-   background-color: #ffc667;
+
+.user-color-6 {
+  background-color: #ffc667;
 }
-.table-header-container{
+
+.table-header-container {
   width: 90%;
   margin: 0 auto;
-  h1{
+
+  h1 {
     display: inline-block;
     margin-bottom: 15px;
   }
-  .filter-container{
-    i{
-      font-size: .7em;
+
+  .filter-container {
+    i {
+      font-size: 0.7em;
     }
   }
-  .search-sort-container{
+
+  .search-sort-container {
     display: inline-flex;
     align-items: center;
     justify-content: flex-end;
     width: 100%;
     margin-bottom: 15px;
-    div:not(:first-child){
-      margin: 0px 20px;
+
+    div:not(:first-child) {
+      margin: 0 20px;
     }
-    label{
+
+    label {
       font-size: 18px;
     }
-    select{
+
+    select {
       display: inline-block;
       appearance: none;
-     -webkit-appearance: none;
-     -moz-appearance: none;
-     border: none;
-     /* needed for Firefox: */
-     overflow:hidden;
-     min-width: 280px;
-     padding: 4px 8px;
-     background-color: #f7faff;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      border: none;
+      /* needed for Firefox: */
+      overflow: hidden;
+      min-width: 280px;
+      padding: 4px 8px;
+      background-color: #f7faff;
       border: solid 1px #eaf0fb;
       background-image: url("/images/dropdown-select.png");
       background-repeat: no-repeat;
       background-size: 20px 20px;
-      background-position: 0px 0px;
+      background-position: 0 0;
       background-size: auto 55%;
-    background-position: 95% 50%;
+      background-position: 95% 50%;
       height: 30px;
-
-        font-size: 14px;
+      font-size: 14px;
     }
-    input{
-        border: solid 1px #eaf0fb;
+
+    input {
+      border: solid 1px #eaf0fb;
       min-width: 130px;
-      padding: 0px 8px;
+      padding: 0 8px;
       background-color: #f7faff;
       height: 30px;
       font-size: 14px;
     }
-    button{
+
+    button {
       outline: none;
       border: solid 1px #eaf0fb;
       background-color: $royal-blue;
@@ -204,11 +286,14 @@ ul,li{list-style:none;margin:0;padding:0;}
       font-size: 14px;
     }
   }
-  .show-filters-button, .clear-filters-button, .apply-filters-button{
+
+  .apply-filters-button,
+  .clear-filters-button,
+  .show-filters-button {
     font-size: 20px;
     font-weight: 900;
     font-style: italic;
-    margin: 15px 0px;
+    margin: 15px 0;
     display: inline-block;
     color: $orange;
     border: 2px solid $orange;
@@ -216,39 +301,44 @@ ul,li{list-style:none;margin:0;padding:0;}
     border-radius: 5px;
     cursor: pointer;
   }
-  .clear-filters-button, .apply-filters-button{
+
+  .apply-filters-button,
+  .clear-filters-button {
     font-size: 16px;
     padding: 5px 8px;
-    margin: 0px 10px;
+    margin: 0 10px;
   }
-  .all-filter-options-container{
+
+  .all-filter-options-container {
     display: none;
     border: 2px solid $light-blue;
     border-radius: 5px;
     padding: 15px;
-    .all-filter-options{
+
+    .all-filter-options {
       display: flex;
-      .filter-option{
+
+      .filter-option {
         margin: 10px 30px;
-        span{
+
+        span {
           padding-left: 5px;
         }
       }
     }
-    .clear-filters-container, {
+
+    .clear-filters-container {
       text-align: center;
     }
-    .apply-filters-button{
+
+    .apply-filters-button {
       background-color: $orange;
       color: $white;
     }
-
   }
-
-
-
 }
-.users-table{
+
+.users-table {
   width: 90%;
   margin: 0 auto;
   font-family: 'Avenir';
@@ -256,261 +346,307 @@ ul,li{list-style:none;margin:0;padding:0;}
   font-weight: 500;
   letter-spacing: 0.4px;
   color: $royal-blue;
-  border-spacing: 0px;
-  thead tr:nth-child(1) th{
+  border-spacing: 0;
+
+  thead tr:nth-child(1) th {
     background: #f7faff;
     position: sticky;
     top: 0;
     z-index: 10;
-    border-top: 1px solid  rgba(97, 97, 97, 0.1);
+    border-top: 1px solid rgba(97, 97, 97, 0.1);
   }
 
-  thead th{
+  thead th {
     position: sticky;
-    top: 0px;
+    top: 0;
   }
 }
-.users-table tr{
+
+.users-table tr {
   height: 50px;
 }
-.users-table td{
-  border-bottom: 1px solid  rgba(97, 97, 97, 0.1);
+
+.users-table td {
+  border-bottom: 1px solid rgba(97, 97, 97, 0.1);
 }
-.users-table{
-  border-left:  1px solid  rgba(97, 97, 97, 0.1);
-  border-right : 1px solid  rgba(97, 97, 97, 0.1);
+
+.users-table {
+  border-left: 1px solid rgba(97, 97, 97, 0.1);
+  border-right: 1px solid rgba(97, 97, 97, 0.1);
 }
-.users-table thead td{
+
+.users-table thead td {
   font-weight: 900;
   font-size: 16px;
 }
-.users-table tbody td{
+
+.users-table tbody td {
   font-weight: 500;
   padding-left: 5px;
 }
-.avenir-500{
+
+.avenir-500 {
   font-family: 'Avenir';
-   font-size: 14px;
-   font-weight: 500;
-   letter-spacing: 0.4px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.4px;
 }
-.avenir-900{
+
+.avenir-900 {
   font-family: 'Avenir';
-   font-size: 14px;
-   font-weight: 900;
-   letter-spacing: 0.4px;
+  font-size: 14px;
+  font-weight: 900;
+  letter-spacing: 0.4px;
 }
-.is-danger{
+
+.is-danger {
   color: $danger-red;
 }
-.is-centerd-text{
+
+.is-centerd-text {
   text-align: center;
 }
 
-body{
+body {
   /*background-image: url("/images/church.jpg");
   background-repeat: no-repeat;
   background-size: cover;*/
   font-family: 'Avenir';
-   font-size: 14px;
-   font-weight: 300;
-   letter-spacing: 0.4px;
-   color:$royal-blue;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.4px;
+  color: $royal-blue;
 }
-.main-container{
+
+.main-container {
   margin-top: 40px;
   padding-bottom: 40px;
 }
-.main-container.no-margin-top{
-  margin-top: 0px;
+
+.main-container.no-margin-top {
+  margin-top: 0;
 }
-.main-container.no-padding-bottom{
-  padding-bottom: 0px;
+
+.main-container.no-padding-bottom {
+  padding-bottom: 0;
 }
-#header{
-  width:100%;
-  height:auto;
+
+#header {
+  width: 100%;
+  height: auto;
   background: green;
   display: block;
-  margin:0 auto;
+  margin: 0 auto;
   background-color: #cccccc;
-
 }
 
-#header_title{
+#header_title {
   display: inline-block;
 }
-#header_main_nav{
+
+#header_main_nav {
   display: block;
-  width:100%;
+  width: 100%;
   background-color: $royal-blue;
   padding: 5px 0;
   height: 40px;
-  h3{
+
+  h3 {
     line-height: 40px;
     margin-left: 20px;
   }
 }
 
-#header_main_nav a{
+#header_main_nav a {
   padding: 5px 0;
-  color:white!important;
+  color: white!important;
 }
-#header_buttons{
+
+#header_buttons {
   display: block;
-  width:100%;
+  width: 100%;
   background-color: #f7faff;
   padding: 7px 0;
   text-align: right;
-  box-shadow:1px 1px 5px 0px rgba(50, 50, 50, 0.75);
-  .header-button{
+  box-shadow: 1px 1px 5px 0 rgba(50, 50, 50, 0.75);
+
+  .header-button {
     display: inline-block;
   }
-  .header-button:last-child{
+
+  .header-button:last-child {
     margin-right: 20px;
   }
-  a{
+
+  a {
     margin-right: 5px;
     background-color: $royal-blue;
     color: white;
     padding: 3px;
     border-radius: 8px;
-    box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75);
+    box-shadow: 1px 1px 5px 0 rgba(50, 50, 50, 0.75);
   }
 }
-.button{
-  display:inline-block;
-  margin: 0 3px;
-  margin-right:5px;
-  color: $royal-blue!important;
 
+.button {
+  display: inline-block;
+  margin: 0 5px 0 3px;
+  color: $royal-blue!important;
 }
 
-.button #current-user{
+.button #current-user {
   border-left: 1px solid #2c3f48;
   border-right: 1px solid #2c3f48;
   padding: 0 5px;
-
 }
-#current-user a{
+
+#current-user a {
   background-color: $light-blue!important;
 }
-
-
 /*dashboard page*/
-#welcome-message{
+#welcome-message {
   position: absolute;
   left: 10%;
   /*width:50%;*/
-  color:$royal-blue;
+  color: $royal-blue;
   text-align: center;
 }
-.step-header{
-  color:$royal-blue;
+
+.step-header {
+  color: $royal-blue;
   text-decoration: underline;
 }
-.step-container{
-  width:70%;
-  margin:25px auto;
+
+.step-container {
+  width: 70%;
+  margin: 25px auto;
   background-color: rgba(204, 204, 204, 0.9);
-  color:$royal-blue;
+  color: $royal-blue;
   padding: 15px;
-  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75);
+  box-shadow: 1px 1px 5px 0 rgba(50, 50, 50, 0.75);
 }
-#extraSpace{
-  width:100%;
+
+#extraSpace {
+  width: 100%;
   height: 55px;
   visibility: hidden;
 }
-.step-container h4{
+
+.step-container h4 {
   margin-top: 15px;
 }
-#open-gym-step{
-  width:50%;
+
+#open-gym-step {
+  width: 50%;
   display: inline-block;
-  padding:10px 0px;
+  padding: 10px 0;
   text-align: center;
   margin-top: 15px;
 }
-#event-step{
-  width:50%;
+
+#event-step {
+  width: 50%;
   display: inline-block;
-  float:left;
-  padding: 10px 0px;
+  float: left;
+  padding: 10px 0;
   text-align: center;
   margin-top: 15px;
 }
-#open-gym-step a h4, #event-step a h4{
+
+#event-step a h4,
+#open-gym-step a h4 {
   padding: 5px;
-  display:inline-block;
+  display: inline-block;
   background-color: $royal-blue;
   color: #cccccc;
   border-radius: 4px;
 }
-
 // form stylesheet
 
-.has-errors{
+.has-errors {
   border: 1px solid #cc0000!important;
 }
-
 /*login page*/
-.login-container{
+.login-container {
   width: 30%;
   position: absolute;
-  top:50%;
-  left:50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%,-50%);
   background-color: #ffffff;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
-   border: solid 1px #eaf0fb;
-   border-radius: 25px;
+  border: solid 1px #eaf0fb;
+  border-radius: 25px;
   padding: 20px;
   text-align: center;
 }
-.login-container input:not([type="submit"]){
+
+.login-container input:not([type="submit"]) {
   background-color: #f7faff;
-   border: solid 1px #eaf0fb;
-   margin: 10px;
+  border: solid 1px #eaf0fb;
+  margin: 10px;
 }
 /*signup page*/
-#signup-container{
+#signup-container {
   width: 60%;
   margin: 0 auto;
   background-color: #ffffff;
   border-radius: 25px;
   padding: 20px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
-   border: solid 1px #eaf0fb;
+  border: solid 1px #eaf0fb;
 }
-.signup-input-container{
-  width:100%;
+
+.signup-input-container {
+  width: 100%;
   margin-top: 25px;
 }
-#signup-container input{
-  outline:none;
+
+#signup-container input {
+  outline: none;
   border: 1px black;
   width: 200px;
   padding: 1px;
   background-color: #f7faff;
-   border: solid 1px #eaf0fb;
-   &[type="radio"]{
-     width: auto;
-     margin-right: 5px;
-   }
+  border: solid 1px #eaf0fb;
+
+  &[type="radio"] {
+    width: auto;
+    margin-right: 5px;
+  }
 }
-.admin-input-container{
-  h1{
+
+.admin-input-container {
+  h1 {
     margin-bottom: 5px;
     color: $danger-red;
     font-weight: 900;
   }
 }
-#submit_button{
+
+#submit_button {
   background-color: $royal-blue!important;
   color: white;
-  padding: 3px!important;
+  padding: 3px!important !important;
   border-radius: 5px;
   display: block;
   margin: 0 auto;
+}
+
+#main-header {
+  color: #4062bb;
+  text-align: center;
+}
+
+.start-now {
+  background-color: #4062bb;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
