added map route

--- a/app/views/dashboard/dashboard.ejs
+++ b/app/views/dashboard/dashboard.ejs
@@ -15,7 +15,7 @@
     <div id="main-header">
       <h1>Let's find a place to keep your bike safe!</h1>
       <br/>
-      <a href=""><input type="button" class="start-now" value="Start Now"></a>
+      <a href="/map"><input type="button" class="start-now" value="Start Now"></a>
     </div>
     <section id="sec-back">
       
