--- a/app/views/dashboard/dashboard.ejs
+++ b/app/views/dashboard/dashboard.ejs
@@ -6,6 +6,7 @@
   <title>MBC Dashboard</title>
   <link rel="stylesheet" href="/stylesheets/simple-grid.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/sass/style.css">
 </head>
 
 <body class="church-background">
@@ -17,8 +18,9 @@
       <br/>
       <a href="/map"><input type="button" class="start-now" value="Start Now"></a>
     </div>
+
     <section id="sec-back">
-      
+      <img id="section1img" src="/images/Section1v2.png" />
     </section>
   </div>
 
