--- a/app/views/hosts/login.ejs
+++ b/app/views/hosts/login.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Login Page</title>
-    <link rel="stylesheet" href="/stylesheets/">
+    <link rel="stylesheet" href="/stylesheets/simple-grid.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body class="church-background">
