--- a/app/views/hosts/signup.ejs
+++ b/app/views/hosts/signup.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Signup</title>
-    <link rel="stylesheet" href="/stylesheets/">
+    <link rel="stylesheet" href="/stylesheets/simple-grid.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
 
   </head>
