added new section to landpage

--- a/app/views/dashboard/dashboard.ejs
+++ b/app/views/dashboard/dashboard.ejs
@@ -22,6 +22,11 @@
     <section id="sec-back">
       <img id="section1img" src="/images/Section1v2.png" />
     </section>
+    <section>
+      <div id="main-header">
+        <h1>What others are saying...</h1>
+      </div>
+    </section>
   </div>
 
 </body>
