added user ratings

--- a/app/views/dashboard/dashboard.ejs
+++ b/app/views/dashboard/dashboard.ejs
@@ -26,6 +26,7 @@
       <div id="main-header">
         <h1>What others are saying...</h1>
       </div>
+      <img id="section2img" src="/images/ratings.png" />
     </section>
   </div>
 
