--- a/app/views/hosts/login.ejs
+++ b/app/views/hosts/login.ejs
@@ -12,7 +12,7 @@
     <div class="main-container">
       <div class="login-container">
         <h1>Login!</h1>
-        <form class="" action="/users/login" method="post">
+        <form class="" action="/hosts/login" method="post">
           <label for="email">Email</label>
           <input type="text" name="email" value=""> <br>
           <label for="password">Password</label>
