added signup/choose directory letting you choose

--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -11,7 +11,7 @@
         <div class="header-button"> <a href="/hosts/logout">Logout</a></div>
     <% } else{ %>
       <div class="header-button"><a href="/hosts/login">Log in</a></div>
-      <div class="header-button"><a href="/hosts/signup">Sign Up</a></div>
+      <div class="header-button"><a href="/signup/choose">Sign Up</a></div>
     <% } %>
   </div>
 </div>
