--- a/app/views/open_gym/info.ejs
+++ b/app/views/open_gym/info.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MBC Dashboard</title>
+    <title>SafeKeep</title>
     <link rel="stylesheet" href="/stylesheets/simple-grid.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/open_gym.css">
