--- a/app/views/dashboard/dashboard.ejs
+++ b/app/views/dashboard/dashboard.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MBC Dashboard</title>
+  <title>SafeKeep</title>
   <link rel="stylesheet" href="/stylesheets/simple-grid.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="/sass/style.css">
