--- a/app/views/clients/signup.ejs
+++ b/app/views/clients/signup.ejs
@@ -15,6 +15,7 @@
       <div id="signup-container">
         <h1>Signup!</h1>
         <form class="" action="/clients/signup" method="post">
+          <input type="hidden" name="user_type" value="client">
           <div class="signup-input-container">
             <label for="firstname">Name</label>
             <input type="text" name="name" value="" required>
