edited hosts profile

--- a/app/views/dashboard/dashboard.ejs
+++ b/app/views/dashboard/dashboard.ejs
@@ -13,7 +13,7 @@
   <% include ../layouts/header %>
   <% include ../layouts/message %>
   <div class="main-container">
-    <div id="main-header">
+    <div class="main-header">
       <h1>Let's find a place to keep your bike safe!</h1>
       <br/>
       <a href="/map"><input type="button" class="start-now" value="Start Now"></a>
@@ -23,7 +23,7 @@
       <img id="section1img" src="/images/Section1v3.png" />
     </section>
     <section>
-      <div id="main-header">
+      <div class="main-header">
         <h1>What others are saying...</h1>
       </div>
       <img id="section2img" src="/images/ratings.png" />
