--- a/app/views/hosts/show.ejs
+++ b/app/views/hosts/show.ejs
@@ -1,20 +1,73 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="/stylesheets/simple-grid.min.css">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-  </head>
-  <body >
-    <% include ../layouts/header %>
-    <% include ../layouts/message %>
-    <div class="main-container">
+<head>
+  <meta charset="utf-8">
+  <title>Login Page</title>
+  <link rel="stylesheet" href="/stylesheets/simple-grid.min.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <style type="text/css">
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
 
-        <h1><%= host.name %></h1>
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 25%;
+  }
 
+  /* The Close Button */
+  .close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
 
+  #save-btn{
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+</style>
+</head>
+<body >
+  <% include ../layouts/header %>
+  <% include ../layouts/message %>
+  <div class="main-container">
+    <h1 style="text-align: center;">Your Information</h1>
+    <div class="main-header">
+      <h3><%= host.name %></h3>
+      <p><%= host.location.line1 %> <%= host.location.line2 %></p>
+      <p><%= host.location.city %>, <%= host.location.state %> <%= host.location.zip_code %></p>
+
+      <input type="Button" id="edit-btn" value="Edit Information" onclick="infoPopUp()">
+    </div>
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
         <form class="" action="/hosts/update/<%=host._id %>" method="post">
+          <div>Number of Available Spots:</div>
           <select name="spots">
             <option value="1" <%= host.spots === 1 ? 'selected' : '' %> >1</option>
             <option value="2" <%= host.spots === 2 ? 'selected' : '' %>>2</option>
@@ -32,13 +85,56 @@
             <option value="14" <%= host.spots === 14 ? 'selected' : '' %>>14</option>
             <option value="15" <%= host.spots === 15 ? 'selected' : '' %>>15</option>
           </select>
+          <br />
+          <div>Update Location <%= host.location.city %> </div>
+          Address Line 1: <input type="input" value="<%= host.location.line1 %>">
+          <br />
+          Address Line 2: <input type="input" value="<%= host.location.line2 %>">
+          <br />
+          State: <input type="input" value="<%= host.location.state %>">
+          <br />
+          City: <input type="input" value="<%= host.location.city %>">
+          <br />
+          Zip Code: <input type="input" value="<%= host.location.zip_code %>">
+          <br />
           <input type="submit" name="" value="Update">
         </form>
-
-
-
-
+      </div>
     </div>
+  </div>
+  <script type="text/javascript">
 
-  </body>
+    function infoPopUp(){
+      // Get the modal
+      var modal = document.getElementById('myModal');
+
+    // Get the <input> element that closes the modal
+    var closeBtn = document.getElementsByClassName("close")[0];
+
+    var span = document.getElementsByClassName("close")[0];
+
+    // open the modal 
+    modal.style.display = "block";
+
+    // When the user clicks on close btn, close the modal
+    closeBtn.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+
+    // When the user clicks anywhere outside of the modal, keep it open
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  }
+
+</script>
+</body>
 </html>
