--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -633,7 +633,7 @@ body {
   margin: 0 auto;
 }
 
-#main-header {
+.main-header {
   color: #4062bb;
   text-align: center;
   padding-top: 50px
@@ -687,4 +687,9 @@ body {
 }
 .signup-choose h1 {
     margin-top: 15px;
+}
+
+#edit-btn{
+  font-size: 28px;
+  font-weight: bold;
 }
