--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -693,3 +693,23 @@ body {
   font-size: 28px;
   font-weight: bold;
 }
+
+#overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  background-color: rgba(0,0,0,0.4);
+}
+#modal{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 30%;
+  height: 30%;
+  z-index: 5;
+  background-color: $white;
+  transform: translate(-50%, -50%);
+}
