--- a/app/views/map/map.ejs
+++ b/app/views/map/map.ejs
@@ -30,10 +30,10 @@
     <div id="modal" style="display:none">
       <div class="modal-content">
         <form class="" action="/reservation/create" method="post">
-          <h1>Would you like to Book an appointment with: <span id="host_name"></span></h1>
+          <h1>Would you like to Reserve this spot?<span id="host_name"></span></h1>
           <input type="hidden" name="client_id" id="client_id">
           <input type="hidden" name="host_id" id="host_id">
-          <input type="submit" value="Reserve">
+          <input type="submit" value="Yes">
         </form>
       </div>
     </div>
