add confirmation code in reservation success page

--- a/app/views/reservations/success.ejs
+++ b/app/views/reservations/success.ejs
@@ -16,6 +16,12 @@
 
         <p>with: <%=host.name%>
 
+          <p> Your confirmation code is :<%=reservation._id%> </p> 
+
+          <form>
+<input type="button" value="Homepage" onclick="window.location.href='/'" />
+</form>
+
 
 
     </div>
