--- a/app/views/map/map.ejs
+++ b/app/views/map/map.ejs
@@ -35,7 +35,7 @@
     <div id="modal" style="display:none">
       <div class="modal-content">
         <form class="" action="/reservation/create" method="post">
-          <h2>Would you like to Reserve this spot?<span id="host_name"></span></h2>
+          <h2>Would you like to reserve this spot?<span id="host_name"></span></h2>
           <input type="hidden" name="client_id" id="client_id">
           <input type="hidden" name="host_id" id="host_id">
           <input type="submit" value="Yes">
