--- a/app/views/map/map.ejs
+++ b/app/views/map/map.ejs
@@ -38,7 +38,7 @@
           <h2>Would you like to Reserve this spot?<span id="host_name"></span></h2>
           <input type="hidden" name="client_id" id="client_id">
           <input type="hidden" name="host_id" id="host_id">
-          <input type="submit" value="Yes">
+          <input type="submit" class="start-now" value="Yes">
         </form>
       </div>
     </div>
