--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -708,9 +708,21 @@ body {
   top: 50%;
   left: 50%;
   width: 30%;
-  height: 30%;
+  height: 300px;
   z-index: 5;
   background-color: $white;
   transform: translate(-50%, -50%);
   padding: 15px;
+}
+#reserve-button {
+  background-color: #4062bb;
+  border: none;
+  color: white;
+  padding: 15px 50px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 150px;
+  cursor: pointer;
 }
