--- a/app/views/reservations/success.ejs
+++ b/app/views/reservations/success.ejs
@@ -20,7 +20,7 @@
           <p> Your confirmation code is :<%=reservation._id%> </p>
 
           <form>
-<input type="button" value="Homepage" onclick="window.location.href='/'" />
+<input type="button" class="start-now" value="Go to HomePage" onclick="window.location.href='/'" />
 </form>
 
 
